# Text-To-Image-API

./: DEPLOYMENT.md  Procfile  README.md  app.py  gemini_service.py  nixpacks.toml  pyproject.toml  railway-requirements.txt  railway.json  replit.md  requirements.txt  setup.py
static/: script.js  style.css
templates/: index.html
