[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "text-to-image-api"
version = "1.0.0"
description = "A Flask-based text-to-image API using Google Gemini 2.0 Flash"
dependencies = [
    "Flask>=3.0.0",
    "flask-limiter>=3.8.0",
    "google-genai>=0.3.0",
    "gunicorn>=23.0.0",
    "werkzeug>=3.0.0"
]

[project.scripts]
start = "main:app"